POET code generator for manycore stencil code

--- a/projects/Makefile.am
+++ b/projects/Makefile.am
@@ -41,6 +41,7 @@ SUBDIRS = \
 	RTC \
 	PowerAwareCompiler \
 	ManyCoreRuntime \
+	StencilManyCore \
 	Fortran_to_C \
         minitermite \
 	mint \
